WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
216286
Crashtracer inside PDFPlugin::createScrollbar
https://bugs.webkit.org/show_bug.cgi?id=216286
Summary
Crashtracer inside PDFPlugin::createScrollbar
Brady Eidson
Reported
2020-09-08 14:55:34 PDT
Crashtracer inside PDFPlugin::createScrollbar Null Frame* deref <
rdar://problem/68474062
>
Attachments
Patch for landing
(2.13 KB, patch)
2020-09-08 15:00 PDT
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2020-09-08 15:00:23 PDT
Created
attachment 408271
[details]
Patch for landing
EWS
Comment 2
2020-09-08 15:58:16 PDT
Committed
r266756
: <
https://trac.webkit.org/changeset/266756
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 408271
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug